[package]
name = "motoro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A rendering engine based on Vulkan API"
readme = "README.md"
homepage = "https://github.com/lebedec/motoro"
repository = "https://github.com/lebedec/motoro"

[dependencies]
bumaga = { path = "../bumaga" }
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sdl2 = { version = "0.36" }
vulkanalia = { version = "0.22", features = ["libloading", "provisional"] }
zune-png = { version = "0.4.10", default-features = false }
mesura = { version = "0.1" }
fontdue = { version = "0.8.0" }

[profile.dev.package.zune-png]
opt-level = 3